--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.2.1",
     "@ant-design/icons": "^5.2.6",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
@@ -26,6 +27,7 @@
     "aos": "^2.3.4",
     "axios": "^1.6.5",
     "chroma-js": "^2.4.2",
+    "d3-interpolate": "^3.0.1",
     "dayjs": "^1.11.13",
     "firebase": "^10.7.1",
     "font-awesome": "^4.7.0",
