--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-signature-canvas": "^1.0.6",
     "react-slick": "^0.30.1",
     "reactjs-popup": "^2.0.6",
+    "recharts": "^2.13.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.70.0",
     "slick-carousel": "^1.8.1",
