--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
     "react-signature-canvas": "^1.0.6",
     "react-slick": "^0.30.1",
     "reactjs-popup": "^2.0.6",
+    "recharts": "^2.13.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.70.0",
     "slick-carousel": "^1.8.1",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "sweetalert2": "^11.10.5",
+    "victory": "^37.2.0",
     "web-vitals": "^3.5.2",
     "zustand": "^4.5.2"
   },
